--- a/views/userprofile.hbs
+++ b/views/userprofile.hbs
@@ -6,19 +6,70 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-
+            <h1>{{message}}</h1>
             <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>Overview</h4>
+                </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-8">
-                            <strong>Description:</strong>
+                            <h4>Description:</h4>
                             <span>{{userDetails.description}}</span>
                         </div>
                         <div class="col-md-4">
                             <a href="/userprofile/{{userDetails.username}}"><img class="img-responsive host-featured-img" src="/uploads/{{userDetails.profileimg}}" /></a>
-                            <a href="/messages?username={{userDetails.username}}"><div class="btn btn-default orgDiv volDiv">Message</div></a>
+                            <div class="row">
+                                <div class="col-md-6 profileBtn">
+                                    <a href="/messages?username={{userDetails.username}}"><div class="btn btn-default orgDiv volDiv">Send Message</div></a>
+                                </div>
+                                <div class="col-md-6 profileBtn">
+                                    <a href="/feedback?id={{userDetails._id}}"><div class="btn btn-success orgDiv volDiv">Leave Feedback</div></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading activateDiv">
+                    <h4>Location</h4>
+                </div>
+                <div class="panel-body initialHidden">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>Map:</h4>
+                            <a href="/userprofile/{{userDetails.username}}"><img class="img-responsive host-featured-img" style="height:400px width:600px" src="/uploads/{{userDetails.profileimg}}" /></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading activateDiv">
+                    <h4>Feedback</h4>
+                </div>
+                <div class="panel-body initialHidden">
+                    {{#userDetails.feedbackreceived_ids}}
+                        <div class="row">
+                            <div class="col-md-1">
+                                <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
+
+                            </div>
+                            <div class="col-md-11">
+                                <div><strong>{{sender_id.displayname}}</strong></div>
+                                <div>{{content}}</div>
+
+                            </div>
+                        </div>
+                    {{/userDetails.feedbackreceived_ids}}
                 </div>
             </div>
         </div>
