Implemented "preUserInput" added pre tags to display all multiline user input (messages, feedback, user descriptions)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -237,6 +237,15 @@ div{
     display: none;
 }
 
+.preUserInput {
+    white-space: pre-wrap;
+    word-break: normal;
+    background: none;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 .profileBtn:first-of-type {
     margin-right: 0;
     padding-right: 0;
