--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,7 +17,7 @@
                         <div class="col-md-8">
                             <h4><a href="/userprofile/{{user.username}}">{{user.displayname}}</a></h4>
                             <strong>Description:</strong>
-                            <span>{{user.description}}</span>
+                            <span><pre class="preUserInput">{{user.description}}</pre></span>
                         </div>
                         <div class="col-md-4">
                             <a href="/userprofile/{{user.username}}"><img class="img-responsive host-featured-img" src="/uploads/{{user.profileimg}}" /></a>
