--- a/views/register.hbs
+++ b/views/register.hbs
@@ -61,7 +61,7 @@
                         </div>
                         <div class="checkbox-inline">
                             <label><input type="checkbox" name="options[]" value="families" />Suitable for families</label>
-                        </div>
+                        </div><br />
                         <input type="hidden" name="userrole" value="organization" />
                         <button class="btn btn-default" type="submit">Submit</button>
                     </form>
