--- a/views/feedback.hbs
+++ b/views/feedback.hbs
@@ -3,13 +3,13 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Messages</h2>
-                    <h5>View and send messages</h5>
+                    <h2>Feedback</h2>
+                    <h5>Leave feedback for {{receivingUser.displayname}}</h5>
                 </div>
             </div>
             <div class="row sendMessage initialHidden">
                 <div class="col-md-8">
-                    <strong>Leave feedback for {{receivingUser.displayname}}</strong>
+                    <strong>Feedback for {{receivingUser.displayname}}</strong>
                     <form action="/feedback" method="post" id="addJobForm">
                         <input type="text" value="{{query.id}}" class="form-control hidden" id="feedbackid" name="feedbackid"/>
                         <input type="text" value="{{query.originatingTitle}}" class="form-control hidden" id="originatingTitle" name="originatingTitle" />
