Added ../public/uploads directory to git to allow example user images to be pushed to heroku/ git Reformatted "Newest Feedback" section of index

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -100,8 +100,13 @@
                 {{#feedbackfeatured}}
                     <div class="col-md-4">
                         <div class="item-dim">
-                            <blockquote>{{this.content}}</blockquote>
-                            <a href="/userprofile/{{this.recipient_id.username}}">{{this.recipient_id.username}}</a>
+                            <blockquote>
+                                <p>{{this.content}}</p>
+                                <footer>
+                                    <a href="/userprofile/{{this.recipient_id.username}}">{{this.recipient_id.username}}</a>
+                                </footer>
+                            </blockquote>
+
                         </div>
                     </div>
                 {{/feedbackfeatured}}
