--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,16 +50,64 @@ textarea{
     margin-top: 40px;
 }
 
+#logoImg {
+    height: 119px;
+}
+
 .nav {
-    font-size: 11px;
+    font-size: 18px;
+    font-family: 'Nunito', sans-serif;
     line-height: 22px;
     font-weight: 500;
     text-transform: uppercase;
+
+}
+
+.nav li {
+    position: relative;
+    display: inline-block;
+    height: 100px;
+    line-height: 100px;
+    border: 1px solid black;
+}
+
+.nav li>a{
+    position: relative;
+    display: inline-block;
+    color: black;
+    background: none;
+    line-height: 100px;
+    padding:0 10px;
+    margin:0;
+}
+
+.nav li>a:hover {
+    background: none;
+}
+
+.nav li:hover::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom:-1px;
+    width: 100%;
+    height:3px;
+    background: lightblue;
+    z-index: 1;
 }
 
 .navbar {
     width: 100%;
     margin-bottom: 0;
+}
+
+.navbar-nav {
+    background: none;
+}
+
+.navbarCustom {
+    background: white;
 }
 
 .navList {
@@ -85,6 +133,7 @@ textarea{
     width: 100%;
     height: 100%;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 .index_jumbo::after {
@@ -133,30 +182,34 @@ textarea{
 
 /*Newest Orgs Carousel*/
 
-.carousel-header-col, .slide-controls-col {
+.indexSectionHeader-col, .slide-controls-col {
     height: 50px;
 }
 
-.header-row {
-    margin-top: 0px;
+.indexSectionHeader-col {
+    margin-bottom: 15px;
 }
 
-.newestOrgsHeader h2{
+.header-row {
+    margin-top: 30px;
+}
+
+.indexSectionHeader h2{
     position: absolute;
     display: inline-block;
-    bottom: 10px;
+    bottom: 0px;
     margin-bottom: 0;
 }
 
 .slide-controls{
     position: absolute;
     display: inline-block;
-    bottom: 10px;
+    bottom: 0px;
     right: 15px;
 }
 
 @media screen and (max-width: 992px) {
-    .newestOrgsHeader h2 {
+    .indexSectionHeader h2 {
         position: static;
         text-align: center;
         width: 100%;
@@ -203,7 +256,7 @@ textarea{
 }
 
 .customCaption {
-    background: rgba(0,0,0,.7);
+    background: rgba(0,0,0,.9);
     margin-left: 15px;
     margin-right: 15px;
     padding-top: 0;
@@ -221,6 +274,24 @@ textarea{
     white-space: normal;
 }
 
+.feedbackSVG {
+    padding: 2px;
+    position: absolute;
+    top: 0;
+    left: 15px;
+    z-index: -1;
+}
+
+
+
+.feedbackDiv {
+    margin: 0 15px;
+    padding-bottom: 40px;
+}
+
+.feedbackItem{
+    padding: 20px 0;
+}
 
 .customCaption>a{
     color: white;
