--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,64 +7,64 @@
       <script src="javascripts/bootstrap.min.js"></script>
       <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
       <link rel='stylesheet' href='stylesheets/style.css' />
-
+      <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
 
   </head>
   <body>
-        <nav role="navigation" id="myNavBar" class="navbar navbar-default">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="navbar-header">
-                            <button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
-                                <span class="sr-only">Toggle Navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        </div>
-                        <div class="navbar-collapse collapse nopadding">
-                            <ul class="nav navbar-nav navList">
-                                <li id="navItemIndex">
-                                    <a href="/">Home</a></li>
-                                <li id="navItemJobList" class="volDiv">
-                                    <a href="/joblist">Opportunity List</a></li>
-                                <li id="navItemVolList" class="orgDiv">
-                                    <a href="/vollist">Volunteer List</a>
-                                </li>
-                                <li id="navItemOrgList">
-                                    <a href="/orglist">Organization List</a></li>
-                                <li id="navItemRegister">
-                                    <a href="/register">Register</a></li>
-                                <li id="navItemTeam">
-                                    <a href="#">Team</a></li>
-                                <li id="#navItemContact">
-                                    <a href="#">Contact</a></li>
-                            </ul>
-                            <ul class="nav navbar-nav navbar-right orgDiv volDiv">
-                                <li>
-                                    <a href="/dashboard/">My Account</a>
-                                </li>
-                                <li>
-                                    <a href="/messages">Inbox</a>
-                                </li>
-                                <li>
-                                    <a href="/signout">Logout</a>
-                                </li>
+            <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
+                <div class="container">
+                    <img src="/images/logo_final.png" id="logoImg"/>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="navbar-header">
+                                <button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
+                                    <span class="sr-only">Toggle Navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            </div>
+                            <div class="navbar-collapse collapse nopadding">
+                                <ul class="nav navbar-nav navList">
+                                    <li id="navItemIndex">
+                                        <a href="/">Home</a>
+                                    </li>
+                                    <li id="navItemOrgList">
+                                        <a href="/orglist">Organization List</a>
+                                    </li>
+                                    <li id="navItemRegister">
+                                        <a href="/register">Register</a></li>
+                                    <li id="navItemTeam">
+                                        <a href="#">Team</a>
+                                    </li>
+                                    <li id="#navItemContact">
+                                        <a href="#">Contact</a>
+                                    </li>
+                                </ul>
+                                <ul class="nav navbar-nav navbar-right orgDiv volDiv">
+                                    <li>
+                                        <a href="/dashboard/">My Account</a>
+                                    </li>
+                                    <li>
+                                        <a href="/messages">Inbox</a>
+                                    </li>
+                                    <li>
+                                        <a href="/signout">Logout</a>
+                                    </li>
 
 
-                            </ul>
-                            <ul class="nav navbar-nav navbar-right guestDiv ">
-                                <li>
-                                    <a href="/login">Login</a>
-                                </li>
-                            </ul>
+                                </ul>
+                                <ul class="nav navbar-nav navbar-right guestDiv ">
+                                    <li>
+                                        <a href="/login">Login</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-            </div>
-        </nav>
+                </div>
+            </nav>
         {{{body}}}
       <script src="javascripts/client-app.js" type="text/javascript"></script>
   </body>
