--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,18 +1,18 @@
 
 <div class="jumbotron index_jumbo">
+    <div class="container">
+        <div class="page-header">
+            <h2 class="jumbo_h1">
+                Welcome to VolunteerApp!
+            </h2>
+            <h4 class="jumbo_h4">Helping enthusiastic volunteers connect with capable organizations across the globe.</h4>
 
-</div>
-<div class="container">
-    <div class="page-header">
-        <h2 class="jumbo_h1">
-            Welcome to VolunteerApp!
-        </h2>
-        <h4 class="jumbo_h4">Helping enthusiastic volunteers connect with capable organizations across the globe.</h4>
-
+        </div>
     </div>
 </div>
-<a href="#bodyDiv"><span class="glyphicon glyphicon-chevron-down" id="jumbo_down"></span></a>
 
+<a href="#bodyDiv-anchor"><span class="glyphicon glyphicon-chevron-down" id="jumbo_down"></span></a>
+<div id="bodyDiv-anchor"></div>
 <div class="container" id="bodyDiv" data-controller="index" data-action="{{user.role}}">
     <div class="row header-row">
         <div class="col-md-11 indexSectionHeader-col">
