--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,61 +11,64 @@
 
   </head>
   <body>
-            <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
-                <div class="container">
-                    <img src="/images/logo_final.png" id="logoImg"/>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="navbar-header">
-                                <button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
-                                    <span class="sr-only">Toggle Navigation</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                            </div>
-                            <div class="navbar-collapse collapse nopadding">
-                                <ul class="nav navbar-nav navList">
-                                    <li id="navItemIndex">
-                                        <a href="/">Home</a>
-                                    </li>
-                                    <li id="navItemOrgList">
-                                        <a href="/orglist">Organization List</a>
-                                    </li>
-                                    <li id="navItemRegister">
-                                        <a href="/register">Register</a></li>
-                                    <li id="navItemTeam">
-                                        <a href="#">Team</a>
-                                    </li>
-                                    <li id="#navItemContact">
-                                        <a href="#">Contact</a>
-                                    </li>
-                                </ul>
-                                <ul class="nav navbar-nav navbar-right orgDiv volDiv">
-                                    <li>
-                                        <a href="/dashboard/">My Account</a>
-                                    </li>
-                                    <li>
-                                        <a href="/messages">Inbox</a>
-                                    </li>
-                                    <li>
-                                        <a href="/signout">Logout</a>
-                                    </li>
-
-
-                                </ul>
-                                <ul class="nav navbar-nav navbar-right guestDiv ">
-                                    <li>
-                                        <a href="/login">Login</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+    <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
+        <div class="container">
+            <img src="/images/logo_final.png" id="logoImg"/>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="navbar-header">
+                        <button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">Toggle Navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
                     </div>
+                    <div class="navbar-collapse collapse nopadding">
+                        <ul class="nav navbar-nav navList">
+                            <li id="navItemIndex" class="active">
+                                <a href="/">Home</a>
+                            </li>
+                            <li id="navItemOrgList">
+                                <a href="/orglist">Organization List</a>
+                            </li>
+                            <li id="navItemRegister">
+                                <a href="/register">Register</a></li>
+                            <li id="navItemTeam">
+                                <a href="#">Team</a>
+                            </li>
+                            <li id="#navItemContact">
+                                <a href="#">Contact</a>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right orgDiv volDiv">
+                            <li id="navItemDashboard">
+                                <a href="/dashboard/">My Account</a>
+                            </li>
+                            <li id="navItemMessages">
+                                <a href="/messages">Inbox</a>
+                            </li>
+                            <li>
+                                <a href="/signout">Logout</a>
+                            </li>
 
+
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right guestDiv ">
+                            <li id="navItemLogin">
+                                <a href="/login">Login</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </nav>
-        {{{body}}}
+            </div>
+
+        </div>
+    </nav>
+        <div class="templateContent">
+            {{{body}}}
+        </div>
+
       <script src="javascripts/client-app.js" type="text/javascript"></script>
   </body>
 </html>
