--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row" id="bodyDiv" data-controller="register" data-action="{{user.role}}">
+    <div class="row" id="bodyDiv" data-controller="login" data-action="{{user.role}}">
 
         <div class="col-md-12">
             <h2>Login</h2>
