--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -43,7 +43,7 @@
                         </div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-1">
+                                <div class="col-xs-2 feedbackImgCol">
                                     <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
 
                                 </div>
@@ -64,7 +64,7 @@
                     {{else}}
                         <div class="panel-body messageDiv {{@index}}" data-originatingtitle="{{originatingTitle}}">
                             <div class="row">
-                                <div class="col-md-1">
+                                <div class="col-xs-2 feedbackImgCol">
                                     <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
 
                                 </div>
