--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
       <link rel='stylesheet' href='stylesheets/style.css' />
       <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <nav role="navigation" id="myNavBar" class="navbar navbar-fixed-top navbarCustom">
