--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="navbar-header">
-                        <button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
+                        <button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle collapsed">
                             <span class="sr-only">Toggle Navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -25,7 +25,7 @@
                         </button>
                     </div>
                     <div class="navbar-collapse collapse nopadding">
-                        <ul class="nav navbar-nav navList">
+                        <ul class="nav navbar-nav">
                             <li id="navItemIndex" class="active">
                                 <a href="/">Home</a>
                             </li>
