--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -47,7 +47,7 @@
                                     <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
 
                                 </div>
-                                <div class="col-md-11">
+                                <div class="col-xs-10">
                                     <div><strong>{{sender_id.displayname}} - {{title}}</strong></div>
                                     <div><pre class="preUserInput">{{content}}</pre></div>
 
@@ -68,7 +68,7 @@
                                     <a href="/userprofile/{{sender_id.username}}"><img class="img-responsive user-featured-image" src="/uploads/{{sender_id.profileimg}}" /></a>
 
                                 </div>
-                                <div class="col-md-11">
+                                <div class="col-xs-10">
                                     <strong>{{sender_id.displayname}} - {{originatingTitle}}</strong>
                                     <div><pre class="preUserInput">{{content}}</pre></div>
                                 </div>
