--- a/views/index.hbs
+++ b/views/index.hbs
@@ -108,17 +108,13 @@
                     </filter>
                 </defs>
 
-
-
-
-                    <polygon points="0,0 100,0 100,90 8,90 4,100 5,90 0,90" vector-effect="non-scaling-stroke" fill="none" stroke="black" stroke-width=".5px"></polygon>
-                    <!--<rect width="100%" height="260px"/>
-                    <path d="M 10 260 l 30 0 -30 31 z"/>-->
-
-
+                <polygon points="0,0 100,0 100,90 8,90 4,100 5,90 0,90" vector-effect="non-scaling-stroke" fill="none" stroke="black" stroke-width=".5px"></polygon>
+                <!--<rect width="100%" height="260px"/>
+                <path d="M 10 260 l 30 0 -30 31 z"/>-->
 
             </svg>
-            <div class="feedbackDiv" height="300px">
+
+            <div class="feedbackDiv">
                 {{#feedbackfeatured}}
                     <div class="feedbackItem">
                         <p>{{this.content}}</p>
