Added container around .templateContent

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,9 +65,9 @@
 
         </div>
     </nav>
-        <div class="templateContent">
-            {{{body}}}
-        </div>
+    <div class="container templateContent">
+        {{{body}}}
+    </div>
 
       <script src="javascripts/client-app.js" type="text/javascript"></script>
   </body>
