Added container-fluid around .templateContent

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,7 +65,7 @@
 
         </div>
     </nav>
-    <div class="container templateContent">
+    <div class="container-fluid templateContent">
         {{{body}}}
     </div>
 
